# nectar-conformance

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .gitreview  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  braindump  compose.yaml  nectar-specification-doc.md  pyproject.toml  pyrightconfig.json  renovate.json  tox.ini
frontend/: index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
frontend/src/: App.jsx  api.js  format.js  format.test.js  styles.css  theme.js  theme.test.js  ui.jsx  useApi.js  useTheme.js
frontend/src/views/: Changes.jsx  CheckDetail.jsx  Rollout.jsx  SiteDetail.jsx  Sites.jsx  Versions.jsx
nectar_conformance/: __init__.py  config.py  errors.py  model.py  rollout.py  service.py
nectar_conformance/cli/: __init__.py  main.py
nectar_conformance/cli/commands/: __init__.py  changelog_cmd.py  check_meta.py  check_run.py  diff.py  report_diff.py  version_cmd.py
nectar_conformance/datasources/: __init__.py  base.py  compile.py  puppetdb.py  static_repo.py
nectar_conformance/engine/: __init__.py  operators.py  queries.py  runner.py  selectors.py
nectar_conformance/plugins/: __init__.py  base.py  registry.py
nectar_conformance/report/: __init__.py  human.py  json_report.py
nectar_conformance/results/: __init__.py  compare.py  model.py  serialise.py
nectar_conformance/rules/: __init__.py  changelog.py  loader.py  model.py  schema.json  schema.py
nectar_conformance/web/: __init__.py  api.py  app.py  refresh.py  serialise.py  settings.py  store.py
releasenotes/: config.yaml
releasenotes/notes/: at-risk-rollout-visibility-7d3c92a1b6e45f08.yaml  composite-selectors-2f8a41c6d59e03b7.yaml  remove-severity-field-4b7e29c8d1a6f350.yaml  surface-refresh-failures-9c41b7d2a05e83f6.yaml
scripts/: export-catalogs.sh  export-facts.sh
tests/: conftest.py  test_changelog.py  test_cli.py  test_compile.py  test_config.py  test_engine.py  test_loader_schema.py  test_operators.py  test_puppetdb_source.py  test_refresh.py  test_report.py  test_report_diff.py  test_rollout.py  test_service_web.py  test_static_source.py  test_web_api.py  test_web_app.py  test_web_internals.py
tests/fixtures/catalogs/: db1.json  mq1.json  oc1.json  oc2.json
tests/fixtures/checks/: changelog.yaml
tests/fixtures/checks/definitions/: ceilometer.compute.host_count.yaml  ceilometer.compute.image_tag.yaml  cinder.host_count.yaml  cinder.image_tag.yaml  glance.api.host_count.yaml  glance.api.image_tag.yaml  iscsid.image_tag.yaml  mariadb.cluster.host_count.yaml  mariadb.version.yaml  networking.uses_networkd.yaml  neutron.compute.host_count.yaml  neutron.compute.image_tag.yaml  neutron.linuxbridge_absent.yaml  nova.compute.image_tag.yaml  nova.conductor.host_count.yaml  nova.conductor.image_tag.yaml  nova.novnc.host_count.yaml  nova.novnc.image_tag.yaml  os.compute.ubuntu.yaml  os.controller.ubuntu.yaml  os.database.ubuntu.yaml  os.mq.ubuntu.yaml  os.network.ubuntu.yaml  os.proxy_admin.ubuntu.yaml  os.proxy_user.ubuntu.yaml  os.swift_proxy.ubuntu.yaml  os.swift_storage.ubuntu.yaml  os.wagnet_router.ubuntu.yaml  ovn.version.yaml  proxy.admin.host_count.yaml  proxy.user.host_count.yaml  rabbitmq.cluster.host_count.yaml  rabbitmq.erlang_version.yaml  rabbitmq.version.yaml  swift.storage.host_count.yaml  wagnet.router.host_count.yaml
tests/fixtures/facts/: db1.example.test.json  mq1.example.test.json
